fix dropdown z-index
it was behind the map

--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@ body {
 
 .eds-dropdown__list {
     background: #fff;
+    z-index: 500;
 }
 .eds-dropdown__selected-item {
     margin-left: 1rem;
